# Intelligent-AI-Chatbot-Backend

./: .gitignore  README.md  envbackup  pyproject.toml
UI Code/: constants.ts
UI Code/src/app/: app.component.ts  app.routes.ts  documents.component.ts
UI Code/src/app/Home/: home.component.ts
UI Code/src/app/conversations/: conversations.component.ts
UI Code/src/component/: apikey.component.ts  notification.component.ts  popup.component.ts
UI Code/src/component/AIModels/: AddModel.component.ts  DefaultModel.component.ts  ManageModels.component.ts
UI Code/src/component/Chat/: Chat.component.ts
UI Code/src/component/DocumentManagement/: AddDocument.component.ts  UpdateDocument.component.ts
ai_chatbot/: Model__Jina_Embedings.py  Model__OpenAI.py  main.py
